# STPRPG

./: CMakeLists.txt  Makefile  compile.sh  tiles.h  tiles.s
design/: tiles.pyxel  world_map.aseprite
design/characters/: Chasqui.aseprite  Tann.aseprite
design/maps/: tiles.tsx
design/maps/kelwyd/: town.tmx
gfx/: chasqui.h  chasqui.s  tann.h  tann.s  tiles.h  tiles.s
include/: actions.h  camera.h  character.h  constants.h  entity.h  game.c  game.h  map.h  map_town.h  mathtools.h  player.h  sprite.h  state.h  trigger.h  types.h
include/character_states/: states.h
maps/: map1.h  map1.s  map1_data.c  maps.h
source/: actions.c  camera.c  character.c  entity.c  main.c  map.c  map_town.c  mathtools.c  player.c  sprite.c  trigger.c
source/character_states/: move_state.c  npc_move_state.c  npc_stand_state.c  states.c  wait_state.c
